<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/naked_tl_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/naked_tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_tv_sample"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/naked_btn_put01"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put01"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put02"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put02"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put03"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put03"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/naked_btn_put04"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put04"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put05"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put05"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put06"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put06"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/naked_btn_put07"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put07"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put08"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put08"
                android:textSize="32sp" />

            <Button
                android:id="@+id/naked_btn_put09"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:text="@string/naked_btn_put09"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/naked_btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naked_btn_next" />

            <Button
                android:id="@+id/naked_btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naked_btn_reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical" >
            
			<RadioGroup
			    android:id="@+id/radioGroup1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
	
	            <RadioButton
	                android:id="@+id/naked_rb_1in17"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/naked_rb_1in17" />
	
	            <RadioButton
	                android:id="@+id/naked_rb_1in25"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/naked_rb_1in25" />
	
	            <RadioButton
	                android:id="@+id/naked_rb_random"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/naked_rb_random" />
	        </RadioGroup>
	            
            
            
            
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>