<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_btn_level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_level1" />

        <Button
            android:id="@+id/main_btn_level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_level2" />
        <Button
            android:id="@+id/main_btn_level3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_level3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/main_btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_btn_about" />

            <Button
                android:id="@+id/main_btn_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_btn_quit" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
