<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/play_ll_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="-2dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="-1dp"
            android:gravity="center" >

            <Button
                android:id="@+id/play_btn_show01"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show02"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show03"
                android:layout_width="41dp"
                android:layout_height="41dp"
				android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="7"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
			android:id="@+id/play_ll_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="-2dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginStart="-2dp"
			android:layout_marginTop="-1dp"
            android:gravity="center" >

            <Button
                android:id="@+id/play_btn_show04"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show05"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show06"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="4"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_ll_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="-2dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="-1dp"
            android:gravity="center" >

            <Button
                android:id="@+id/play_btn_show07"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show08"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/play_btn_show09"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_margin="-4dp"
                android:layout_marginBottom="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="-4dp"
                android:text="1"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/play_tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/play_tv_sample"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_tv_info"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/play_btn_put01"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put01"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put02"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put02"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put03"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put03"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/play_btn_put04"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put04"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put05"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put05"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put06"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put06"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout3"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/play_btn_put07"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put07"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put08"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put08"
            android:textSize="32sp" />

        <Button
            android:id="@+id/play_btn_put09"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:text="@string/play_btn_put09"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/play_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_btn_next" />

        <Button
            android:id="@+id/play_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_btn_reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout5"
        android:gravity="bottom|right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
			<RadioGroup 
			    android:id="@+id/play_rg_mode" 
			    android:contentDescription="" 
			    android:orientation="horizontal" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content">

				<RadioButton
				    android:id="@+id/play_rb_box"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/play_rb_box"
				    android:checked="true" />

	            <RadioButton
	                android:id="@+id/play_rb_row"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/play_rb_row" />
	
	            <RadioButton
	                android:id="@+id/play_rb_column"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/play_rb_column" />
	
	            <RadioButton
	                android:id="@+id/play_rb_random"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/play_rb_random" />
			</RadioGroup>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>